Adding basic files for projetcs

--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
     <p>contenu</p>
 </section>
 
+<!-- section 6 --------------------------------------------->
+
+<section id="section6">
+    <p id="textInsta">Instagram</p>
+    <img id="logoInsta" src="assets/photo/insta.jpeg" alt="">
+</section>
+
 
 
  <!-- GSAP --------------------------------------------->
