Adding basic files for projetcs

--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
     </video>
 
 <!-- section 1 --------------------------------------------->
+<header id="header">
+    <h3 id="mouv1">video</h3>
+        <p id="mouv2">photo</p>
 
+</header>
 <section id="section1">
     <div id="premierePage"> 
-        <h3 id="mouv1">video</h3>
-        <p id="mouv2">photo</p>
+        
             
     <div id="titre">
         <h1>P O R T F O L I O </h1>
@@ -34,14 +37,16 @@
     <p class="texteNoir">photo studio </p>
 </section>
 
-
 <!-- section 3 --------------------------------------------->
 
 <section id="section3">
-    <p>photo exterieure </p>
+    <p>photo exterieure</p>
+    <div id="photoSection3">
+    <img src="assets/photo/IMG_0780 copie.png" alt="Photo bâtiment 1" id="photoBat" /> 
+    <img src="assets/photo/IMG_0712.png" alt="Photo bâtiment 2" id="photoBat2" />
+    <img src="assets/photo/IMG_0745.png" alt="Photo bâtiment 3" id="photoBat3" />
+</div>
 </section>
-
-
 
 <!-- section 4 --------------------------------------------->
 
@@ -54,13 +59,31 @@
 
 <section id="section5">
     <p>contenu</p>
+    <div>
+<div id="photoSection5">
+<img src="assets/photo/IMG_9630.png" alt="contenu1">
+<img src="assets/photo/IMG_9629.jpg" alt="contenu2">
+<img src="assets/photo/IMG_9626.jpg" alt="contenu3">
+<img src="assets/photo/IMG_9623.jpg" alt="contenu4">
+<img src="assets/photo/IMG_9618.jpg" alt="contenu5">
+<img src="assets/photo/IMG_9617.jpg" alt="contenu6">
+<img src="assets/photo/IMG_9616.jpg" alt="contenu7">
+<img src="assets/photo/IMG_9615.jpg" alt="contenu8">
+<img src="assets/photo/IMG_9601.jpg" alt="contenu9">
+<img src="assets/photo/IMG_9599.jpg" alt="contenu10">
+<img src="assets/photo/IMG_9598.jpg" alt="contenu11">
+<img src="assets/photo/IMG_9596.jpg" alt="contenu12">
+</div>
 </section>
+
 
 <!-- section 6 --------------------------------------------->
 
 <section id="section6">
     <p id="textInsta">Instagram</p>
     <img id="logoInsta" src="assets/photo/insta.jpeg" alt="">
+    <img id="logoInsta" src="assets/photo/linkedin.png" alt="">
+    <img id="logoInsta" src="assets/photo/téléchargement.png" alt="">
 </section>
 
 
